# jaffar

./: .clang-format  .gitignore  .gitmodules  AUTHORS  README.md  meson.build
docker/: Dockerfile  build.sh  deploy.sh  docker.cfg  remove.sh  run.sh
examples/: .gitignore  .set_env.sh  run-all.sh  run-jaffar.sh  run-lvl01.sh  run-lvl02.sh  run-lvl03.sh  run-lvl04.sh  run-lvl05.sh  run-lvl06.sh  run-lvl07.sh  run-lvl08.sh  run-lvl09.sh  run-lvl10.sh  run-lvl11.sh  run-lvl12.sh  run-lvl13.sh  run-lvl14.sh  run-lvl15.sh
examples/anyPercent/lvl01/: example.seq  jaffar.config
examples/anyPercent/lvl02/: example.seq  jaffar.config  quicksave.sav
examples/anyPercent/lvl03/: quicksave.sav
examples/anyPercent/lvl03a/: example.seq  jaffar.config
examples/anyPercent/lvl03b/: example.seq  jaffar.config  quicksave.sav
examples/anyPercent/lvl05/: quicksave.sav
examples/anyPercent/lvl07/: quicksave.sav
examples/anyPercent/lvl12/: quicksave.sav
examples/glitchHunt/lvl03_exit/: example.seq  jaffar.config
examples/glitchHunt/lvl05_potion/: jaffar.config  quicksave.sav
examples/hunt/lvl07/: lvl07a.jaffar
examples/hunt/lvl08/: lvl08a.jaffar  lvl08a.sav  lvl08a.sol  lvl08b.sav  lvl08b.sol  lvl08full.sol
examples/hunt/lvl11/: lvl11b.jaffar  lvl11b.sav  lvl11b.sol  lvl11d.jaffar  lvl11d.sav  lvl11d.sol  results-b.txt  run-b.sh
examples/istaria/: lvl01.jaffar  lvl01.sav  lvl01.sol  lvl01a.sav  lvl01a.sol  lvl01b.jaffar  lvl01b.sav  lvl01b.sol  lvl01c.jaffar  lvl01c.sav  lvl01d.jaffar  lvl01d.sav  lvl01full.sol  results-b.txt
examples/istaria/lvl01b/: lvl01a.jaffar  lvl01a.sol
examples/istaria/lvl02/: lvl02a.jaffar  lvl02a.sav  lvl02a.sol  lvl02b.jaffar  lvl02b.sav  lvl02b.sol  lvl02c.jaffar  lvl02c.sav  lvl02c.sol  lvl02full.sol
examples/istaria/lvl03/: lvl03a.jaffar  lvl03a.sav  lvl03a.sol  lvl03b.jaffar  lvl03b.sav  lvl03b.sol  lvl03full.sol
examples/istaria/lvl05/: lvl05b.jaffar  lvl05c.jaffar  lvl05c.sol  lvl05full.sol
examples/istaria/lvl06/: lvl06b.sav
examples/istaria/lvl07/: lvl07a.sav  lvl07a.sol
examples/istaria/lvl08/: lvl08a.jaffar  lvl08a.sav  lvl08a.sol  lvl08b.sav  lvl08b.sol
examples/istaria/lvl11/: lvl11b.jaffar  lvl11b.sol  lvl11c.jaffar  lvl11c.sav  lvl11c.sol
examples/istaria/lvl13/: lvl13a.sol
examples/lvl01/: anyPercent.config  anyPercent.seq  example.seq  glitchless.config  jaffar.config  quicksave.sav  run-jaffar.sh
examples/lvl02/: anyPercent.config  anyPercent.seq  example.seq  jaffar.config  lvl02a.jaffar  lvl02c.jaffar  lvl02d.jaffar  quicksave.sav  run-jaffar.sh
examples/lvl03/: anyPercent.config  anyPercent.seq  jaffar.config  lvl03a.jaffar  quicksave.sav  run-jaffar.sh
examples/lvl03a/: anyPercent.config  jaffar.config
examples/lvl03b/: anyPercent.config  anyPercent.seq  jaffar.config
examples/lvl04/: anyPercent.config  anyPercent.seq  jaffar.config  jaffar.seq  quicksave.sav  run-jaffar.sh
examples/lvl05/: alternativeEnding.config  alternativeEnding.sav  anyPercent.config  anyPercent.seq  jaffar.config  jaffar.seq  lvl05b.jaffar  lvl05c.jaffar  quicksave.sav  run-jaffar.sh
examples/lvl06/: anyPercent.config  jaffar.config  jaffar.seq  lvl06b.jaffar  quicksave.sav  run-jaffar.sh
examples/lvl07/: anyPercent.config  anyPercent.seq  explore.config  explore.sav  jaffar.config  jaffar.seq  lvl07b.jaffar  lvl07b.sav  newSkip.config  newSkip.sav  newSkip.seq  quicksave.sav  run-jaffar.sh  skipSearch.config  skipSearch.sav  skipSearch.seq
examples/lvl08/: anyPercent.config  anyPercent.seq  jaffar.config  jaffar.seq  quicksave.sav  run-jaffar.sh
examples/lvl09/: anyPercent.config  anyPercent.seq  jaffar.config  quicksave.sav  run-jaffar.sh
examples/lvl09a/: anyPercent.config  anyPercent.seq
examples/lvl09b/: anyPercent.config  anyPercent.seq  example.seq  guardpush.config  quicksave.sav
examples/lvl1/: example.seq  jaffar.config
examples/lvl10/: anyPercent.config  anyPercent.seq  jaffar.config  jaffar.seq  quicksave.sav  run-jaffar.sh
examples/lvl10a/: anyPercent.config  anyPercent.seq  prejump.config  prejump.seq  pretile.sav  quicksave.sav
examples/lvl10b/: anyPercent.config  prejump.config  prejump.seq  quicksave.sav  quicksavePreJump.sav
examples/lvl11/: anyPercent.config  anyPercent.seq  jaffar.config  jaffar.seq  lvl11d.jaffar  lvl11d2.jaffar  quicksave.sav  run-jaffar.sh
examples/lvl12/: anyPercent.config  anyPercent.seq  jaffar.config  quicksave.sav
examples/lvl12a/: anyPercent.config  anyPercent.seq
examples/lvl12b/: anyPercent.config  anyPercent.seq  jaffar.sav  quicksave.sav
examples/lvl13/: anyPercent.seq  jaffar.config  jaffar.seq  quicksave.sav  run-jaffar.sh
examples/lvl14/: jaffar.config  quicksave.sav
examples/lvl2/: example.seq  jaffar.config
examples/lvl6/: quicksave.sav
examples/lvl8/: quicksave.sav
examples/lvl9/: quicksave.sav
examples/original/lvl02/: lvl02a.jaffar  lvl02b.jaffar  lvl02c.jaffar  lvl02d.sav
examples/original/lvl03/: lvl03a.jaffar  lvl03b.jaffar  lvl03c.jaffar
examples/saves/: lvl01.sav  lvl02.sav  lvl03.sav  lvl04.sav  lvl05.sav  lvl08.sav  lvl10.sav  lvl14.sav  lvl15.sav
examples/scripts/: lvl01.jaffar  lvl02.jaffar  lvl03.jaffar  lvl04.jaffar  lvl04.mirrorless.jaffar  lvl05.jaffar  lvl06.jaffar  lvl07.jaffar  lvl08.jaffar  lvl09.jaffar  lvl10.jaffar  lvl11.jaffar  lvl12.jaffar  lvl13.jaffar  lvl14.jaffar  lvl15.jaffar
examples/solutions/: lvl01.sol  lvl02.sol  lvl03.sol  lvl04.sol  lvl08.sol  lvl09.sol  lvl10.sol  lvl11.sol  lvl13.sol  lvl14.sol  lvl15.sol
examples/tas/lvl02/: lvl02a.sav  (+17 more)
source/: SDLPopInstance.cc  SDLPopInstance.h  common.h  frame.cc  frame.h  jaffar.cc  jaffar.h  main.cc  miniPoPInstance.cc  miniPoPInstance.h  play.cc  playback.cc  playback.h  rule.cc  rule.h  scorer.cc  scorer.h  sdlpop-instance.cc  sdlpop-instance.h  search.cc  search.h  show-replay.cc  show-snapshot.cc  show.cc  state.cc  state.h  tester.cc  tester.h  train.cc  train.h  utils.cc  utils.h
subprojects/: json.wrap
tools/: check_style.sh  fix_style.sh  install_clang.sh
(+48 files in other folders)
